--- a/healthcheck.html
+++ b/healthcheck.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <title>Health Check</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
+        .status { color: green; font-size: 24px; }
+    </style>
 </head>
 <body>
-    <h1>Website is running successfully!</h1>
+    <h1 class="status">✅ Website is running successfully!</h1>
     <p>Status: OK</p>
     <p>Time: <span id="time"></span></p>
     
